# gabriel-convcnp

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  train.py
convcnp/: __init__.py  convcnp.py  data.py  decoder.py  encoder.py  unet.py  util.py
