[metadata]
name = convcnp
version = 0.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = An implementation of using the ConvCNP for regression and classification
url = https://github.com/wesselb/gabriel-convcnp
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
